# JAPAN_AI_CUP

./: .gitignore  README.md  feature_extraction.py  ichito_model.py  ichito_model_v2.py  ichito_model_v3.py  main.py  main_optuna.py  main_optuna_rf.py  main_r.py  main_rf.py  pyproject.toml
.matplotlib/: fontlist-v390.json
conf/: config.yaml
docs/: MANUAL.md  submission.md  実験管理について.md
inputs/: sample_submission.csv  train_flag.csv
notebooks/: init.ipynb  notebook.ipynb
outputs/optuna/: best_params_rf.yaml
outputs/optuna/sub8/: best_params.yaml
outputs/shap/: shap_importance.csv  shap_values.csv
scripts/: make_features.py  train.py
src/: __init__.py  features.py  models.py  preprocessing.py  utils.py
submission/: submission.csv
