[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "japan-ai-cup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "lightgbm>=4.6.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "shap>=0.45.0",
    "matplotlib>=3.8.0",
    "optuna>=4.7.0",
    "pyyaml>=6.0.3",
]
